# CudaVulkanRender

./: .gitignore  .gitmodules  CMakeLists.txt  NSIGHT_PROFILING_REPORT.md  build_and_run.bat  build_setup.bat  generate_viewer.py  nsight_compute.bat  nsight_profile.bat  quickstart.md  robot_demo.json  run_usdview.bat  setup.bat
asset_library/character/animated_fox/: metadata.json
asset_library/character/figurine/: metadata.json
asset_library/character/seahorse/: metadata.json
asset_library/food/pancakes/: metadata.json
asset_library/furniture/wooden_table/: metadata.json
asset_library/nature/hummingbird/: metadata.json
asset_library/prop/American_football/: metadata.json
asset_library/prop/baseball/: metadata.json
asset_library/prop/baseball_glove/: metadata.json
asset_library/prop/basketball/: metadata.json
asset_library/prop/boxing_glove/: metadata.json
asset_library/prop/figurine/: metadata.json
asset_library/prop/guitar/: metadata.json
asset_library/prop/robot/: metadata.json
asset_library/prop/rubber_duck/: metadata.json
asset_library/prop/soccer_ball/: metadata.json
asset_library/prop/spaceship/: metadata.json
asset_library/prop/toy_airplane/: metadata.json
asset_library/prop/toy_dinosaur/: metadata.json
asset_library/vehicle/remote-controlled_car/: metadata.json
docs/: IK_Solver.md
shaders/: fullscreen.frag.glsl  fullscreen.vert.glsl  post.slang
src/: batch_processor.cpp  batch_processor.h  bvh.cu  bvh.h  cuda_interop.cu  cuda_interop.h  cupti_profiler.cpp  cupti_profiler.h  custom_shader.cpp  custom_shader.h  denoiser.cpp  denoiser.h  dlss_upscaler.cpp  dlss_upscaler.h  gltf_loader.cpp  gltf_loader.h  gpu_textures.cu  gpu_textures.h  hdri.cpp  hdri.h  main.cpp  mjcf_loader.cpp  mjcf_loader.h  nim_cosmos.cpp  nim_cosmos.h  nim_vlm.cpp  nim_vlm.h  optix_denoiser.cpp  optix_denoiser.h  optix_renderer.cpp  optix_renderer.h  optix_renderer_device.cu  pathtracer.cu  pathtracer.h  post_process.cpp  post_process.h  rasterizer.cu  rasterizer.h  restir.cu  restir.h  (+13 more)
src/sim/: props_physics.cpp  props_physics.h  sim_backend.cpp  sim_backend.h  sim_mujoco.cpp
src/ui/: anim_panel.cpp  anim_panel.h  articulation_panel.cpp  articulation_panel.h  control_panel.cpp  control_panel.h  gpu_arch_sm_tracker.cu  gpu_arch_sm_tracker.h  gpu_arch_window.cpp  gpu_arch_window.h  hydra_preview.cpp  hydra_preview.h  material_panel.cpp  material_panel.h  outliner.cpp  outliner.h  robot_demo_panel.cpp  robot_demo_panel.h  sensor_blit.cu  sensor_loader.cpp  sensor_loader.h  sensor_panel.cpp  sensor_panel.h  stats_panel.cpp  stats_panel.h  viewport.cpp  viewport.h
tools/: gpu_arch_main.cpp  urdf_to_usd.py
tools/maya/: README.md  import_mjcf.py
